version 4.0.6